# n-puzzle

./: .gitignore  1  3  5  A_Star.class.cpp  A_Star.class.hpp  Board.class.hpp  CMakeLists.txt  README.md  a.out  build.sh  checker.py  configure.sh  fast  main  main.cpp  ok  parser.cpp  parser.h  test  utils.cpp  utils.hpp
examples/: 3  3-check  4  4test  test
include/: A_Star.class.hpp  Board.class.hpp  Disjoint_database.hpp  Ida_Star.class.hpp  Ida_star.class.hpp  Mode.class.hpp  Node.class.hpp  conf.hpp  heuristic_functions.hpp  n-puzzle.hpp  options.hpp  parser.hpp  utils.hpp
src/: A_Star.class.cpp  Board.class.cpp  Ida_Star.class.cpp  Node.class.cpp  heuristic_functions.cpp  main.cpp  n-puzzle.cpp  parser.cpp  utils.cpp  wasm.cpp
src/disjoint_pattern_database/: DDB_3P.cpp  DDB_555.cpp  DDB_663.cpp  Disjoint_database.cpp
src/pattern_databases/: DDB_663.cpp  Disjoint_database.cpp
testing/: is_solvable.sh
utils/: configure.sh
web/: package-lock.json  package.json  snowpack.lock.json
web/.netlify/: state.json
web/public/: index.html  n-puzzle.wasm  n-puzzle.worker.js
web/public/wasm/: CMakeLists.txt  build.sh  n-puzzle.js  n-puzzle.wasm  test.html  test.js
web/src/: App.css  App.jsx  config.js  index.jsx
web/src/components/: board.jsx  cells.jsx  description.jsx  footer.jsx  header.jsx  loading.jsx  spinner.jsx
web/src/controller/: move.js  playMoves.js  scramble.js
web/src/utils/: n-puzzle.js  swap.js
web/src/wasm/: CMakeLists.txt  n-puzzle.js  n-puzzle.wasm
web/src/workers/: worker.js
web/wasm/: CMakeLists.txt  build.sh  configure.sh  n-puzzle.js  n-puzzle.wasm
